[package]
name = "rocket_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "macros", "time", "chrono", "uuid"] }
tokio = { version = "1.37.0", features = ["full"]}
uuid = { version = "1.8.0", features = ["serde", "v4"] }
