[package]
name = "rocket_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.1"
captcha = "0.0.9"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
regex = "1.10.4"
rocket = { version = "0.5.0-rc.2", features = ["json"] } 
rocket_cors = "0.6.0"
serde = { version = "1.0.201", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "macros", "time", "chrono", "uuid"] }
tokio = { version = "1.37.0", features = ["full"]}
uuid = { version = "1.8.0", features = ["serde", "v4"] }
utoipa = { version = "4.2.3", features = ["rocket_extras"] }
utoipa-scalar = { version = "0.1.0", features = ["rocket"] }

[dev-dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] } 
bcrypt = "0.15.1"